# beastify-rs

./: Cargo.toml  README.md  package.json  webpack.config.js
docs/: 00-introduction.html  00-references.html  01-getting-started.html  01-initial-setup.html  01-prerequisites.html  01-webpack-development.html  02-api-bindings.html  02-creating-objects.html  02-functions-and-closures.html  02-important-concepts.html  02-mixing-rust.html  02-promises-and-futures.html  03-putting-it-together.html  404.html  book.toml  index.html  print.html  searchindex.js  searchindex.json
docs/src/: 01-getting-started.md  01-initial-setup.md  02-api-bindings.md  02-functions-and-closures.md  02-mixing-rust.md  02-promises-and-futures.md  03-putting-it-together.md  SUMMARY.md
js/: bootstrap.js
mdbook/: book.toml
mdbook/src/: 00-introduction.md  00-references.md  01-prerequisites.md  01-webpack-development.md  02-creating-objects.md  02-important-concepts.md
src/: browser.rs  choose_beast.rs  lib.rs
static/: choose_beast.html  manifest.json
static/content_scripts/: beastify.js
